force-app/main/default/objects/Sincronizacion_PEP_SAP__c/Sincronizacion_PEP_SAP__c.object-meta.xml
<CustomObject>
    <label>Sincronizacion PEP SAP</label>
    <nameField>
        <displayFormat>SPSAP-{00000000}</displayFormat>
        <label>Sincronizacion PEP SAP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sincronizaciones PEP SAP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>