force-app/main/default/objects/Sincronizacion_PEP_SAP__c/fields/Decision_Creacion__c.field-meta.xml
<CustomField>
    <fullName>Decision_Creacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decisión de Creación</label>
    <type>Checkbox</type>
</CustomField>