force-app/main/default/objects/Sincronizacion_PEP_SAP__c/fields/Linea_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Proyecto__c</fullName>
    <label>Línea de Proyecto</label>
    <referenceTo>Linea_de_Proyecto__c</referenceTo>
    <relationshipLabel>Sincronizaciones PEP SAP</relationshipLabel>
    <relationshipName>Sincronizaciones_PEP_SAP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>