force-app/main/default/objects/Sincronizacion_PEP_SAP__c/fields/Motivo_Descarte__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Descarte__c</fullName>
    <label>Motivo de Descarte</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>